2023-07-07 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* Merge genconstprop branch to trunk.

2023-07-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* .version:
	  Bump version for generalized constant propagation.

2023-07-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* Merge next branch to trunk.
	* device/lib/stm8/support:
	  Cleanup.

2023-07-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c:
	  Fix a compiler crash due to operation narrowing invaldiating iCode seuqence numbers.

2023-07-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/ds390/gen.c:
	  Fix an issue in ds390 casts to _BitInt.

2023-07-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/pdk/main.c:
	  Generalized constant propagation optimization for pdk and mcs51 pointers.

2023-07-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Basic generalized constant propagation analysis for pdk and mcs51 pointers.

2023-07-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Fix dumping of generalized constant propagation analysis graph debug info for initialization of global objects.

2023-07-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c,
	  support/regression/tests/bug-3607.c:
	  Fix bug #3607, using a variant of the patch by Oleg Endo.

2023-06-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c:
	  Fix bug #3609.
	* src/z80/gen.c,
	  support/regression/tests/bug-3606.c:
	  Fix bug #3606.
	* src/hc08/gen.c:
	  Fix bug #3604.
	* doc/README.txt:
	  Fix bug #3605.

2023-06-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c:
	  Improve 16-bit comparisons.

2023-06-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Improve generalized constant propagation analysis for /, %.

2023-06-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc: